[package]
name = "melt"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
melt-rs = { git = "https://github.com/jantb/melt-rs.git" }
#melt-rs = { path = "../melt-rs" }
druid = { git = "https://github.com/linebender/druid.git", features = ["im"] }
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.91"
uuid = { version = "1.2.2", features = ["serde", "v4"] }
clipboard = "0.5.0"
crossbeam-channel = "0.5"
jsonptr = "0.1.5"
bincode = "1.3.3"
num_cpus = "1.14.0"
num-format = "0.4.4"
human_bytes = { version = "0.4", default-features = false }
once_cell = "1.17.0"
fnv = "1.0.7"
kube = { version = "0.78.0", default-features = false, features = ["client", "rustls-tls"] }
k8s-openapi = { version = "0.17.0", features = ["v1_26"] }
tokio = {version= "1.25.0", features=["full"]}
tokio-stream = "0.1.11"
rayon = "1.6.1"
zstd = {version = "0.12.3",features = ["zdict_builder"]}

